err/p01.checker.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/p01'...
Listing './lib/python3.5/site-packages/p01/checker'...
Compiling './lib/python3.5/site-packages/p01/checker/__init__.py'...
***   File "./lib/python3.5/site-packages/p01/checker/__init__.py", line 167
    print '-'* (len(filename))
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p01/checker/checker.py'...
***   File "./lib/python3.5/site-packages/p01/checker/checker.py", line 135
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/p01/checker/csslint'...
Compiling './lib/python3.5/site-packages/p01/checker/pyflakes.py'...
***   File "./lib/python3.5/site-packages/p01/checker/pyflakes.py", line 39
    except (SyntaxError, IndentationError), value:
                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/p01/checker/sample'...
Listing './lib/python3.5/site-packages/p01.checker-0.5.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/polib-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/pyflakes'...
Listing './lib/python3.5/site-packages/pyflakes/scripts'...
Listing './lib/python3.5/site-packages/pyflakes/test'...
Listing './lib/python3.5/site-packages/pyflakes-1.6.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
